src/app/app.component.scss
.app-container {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: 100%;
}

main {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex: auto;
	width: 100%;
}

.main-container {
	display: flex;
	flex-direction: row;
	max-width: 800px;
}

header {
	margin-bottom: 25px;
}

.content-container {
	flex: auto;
}

@media only screen and (max-width: 800px) {
	.navigation-container {
		display: none;
	}
}

